# thanos

./: .gitignore  .goreleaser.yml  AGENTS.md  LICENSE  Makefile  README.md  README.vi.md  Technical.md  go.mod  go.sum  skills-lock.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.thanos/: agents.yaml  settings.json
.thanos/F001-project-workflow-contract/: events.jsonl  execution-plan.yaml  feature-memory.json  implementation-note.md  review-report.md  state.json  test-report.md
.thanos/F002-feature-auto-detect-framework-when-init-project/: acceptance-criteria.md  design-review-report.md  events.jsonl  state.json  task-brief.md  test-strategy.yaml
.thanos/codebase/: graph.json  summary.md
.thanos/events/: workflow.jsonl
.thanos/features/: F001-project-workflow-contract.yaml  F002-feature-auto-detect-framework-when-init-project.yaml
.thanos/memory/: feature-graph.json  feature-graph.md  workbench.sqlite
.thanos/plans/: T-106.json  T-106.md
.thanos/prompts/: F001-project-workflow-contract-ec1-reviewer.md  F002-feature-auto-detect-framework-when-init-project-coder-round-1.md  F002-feature-auto-detect-framework-when-init-project-coder-round-2.md  F002-feature-auto-detect-framework-when-init-project-coder-round-3.md  (+13 more)
apps/thanos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/thanos-desktop/src-tauri/icons/: site.webmanifest
apps/thanos-desktop/src-tauri/src/: lib.rs  main.rs
docs/: agent-events.md  agent-skill.md  rebuild-plan.md  tauri-ui.md  workflows.md
plans/: 00_structure.md  01_refactor.md
(+133 files in other folders)
