[package]
name = "thanos-desktop"
version = "0.1.0"
description = "Desktop UI for the Thanos CLI workflow"
authors = ["Thanos"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "thanos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
